// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartItem Mutation Should create cart item 1`] = `
Object {
  "data": Object {
    "addCartItem": Object {
      "id": "n",
      "items": Array [
        Object {
          "cartId": "n",
          "itemAmount": 100,
          "itemQuantity": 10,
          "sku": Object {
            "id": "l",
            "inventory": 10,
            "price": 10,
            "sku": "111",
          },
          "skuId": "l",
        },
      ],
      "totalAmount": 100,
      "totalQuantity": 10,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=5, public",
        ],
      },
    },
  },
}
`;

exports[`CartItem Should delete cart item 1`] = `
Object {
  "data": Object {
    "deleteCartItem": Object {
      "id": "l",
      "items": Array [],
      "totalAmount": 0,
      "totalQuantity": 0,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=5, public",
        ],
      },
    },
  },
}
`;

exports[`CartItem Should update cart item 1`] = `
Object {
  "data": Object {
    "updateCartItem": Object {
      "id": "m",
      "items": Array [
        Object {
          "cartId": "m",
          "itemAmount": 10,
          "itemQuantity": 1,
          "sku": Object {
            "id": "m",
            "inventory": 10,
            "price": 10,
            "sku": "111",
          },
          "skuId": "m",
        },
        Object {
          "cartId": "m",
          "itemAmount": 10,
          "itemQuantity": 1,
          "sku": Object {
            "id": "l",
            "inventory": 10,
            "price": 10,
            "sku": "111",
          },
          "skuId": "l",
        },
      ],
      "totalAmount": 20,
      "totalQuantity": 2,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=5, public",
        ],
      },
    },
  },
}
`;
